cleaned up code a bit

--- a/home.html
+++ b/home.html
@@ -20,13 +20,14 @@
             <li><a href="home.html">home</a></li>
             <li><a href="1.html">Inventory</a></li>
             <li><a href="2.html">Contact</a></li>
+            </ul>
       </div>
   	</div>
   </div>
 
 
   <div id="mainContent">
-    <div class="thumb"><img src="mini_files/thumb-homepage.jpg" width="853" height="37"></div>
+    <div class="thumb"><img src="mini_files/thumb-homepage.jpg" alt="Homepage Thumb" width="853" height="37"></div>
     <div id="content-home">
       <p>Good Inc. <br>
           We do good business</p>
