initial work on name greet button.

--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
 <title>Good Inc.</title>
 <link href="./mini_files/css" rel="stylesheet" type="text/css">
 <meta name="description" content="Good Inc.">
+    <script type="text/javascript" src="good.js"></script>
 
 </head>
 
@@ -35,6 +36,16 @@
   </div>
     <div id="Greet">
         <!-- Greeting Form goes Here -->
+        <form action="">
+            <h4>Greeting Form</h4>
+            <p>Please enter your name</p>
+            <input type="text" id="name" size="12" />
+
+            <p>
+                <input type="button" id="data" value="Greet " onclick="get_greet();" />
+            <p>
+
+        </form>
     </div>
     <div id="Sum">
         <!-- Sum Form goes Here -->
