fixed path error
(Chris N on my account)

--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 <title>Good Inc.</title>
 <link href="./mini_files/css" rel="stylesheet" type="text/css">
 <meta name="description" content="Good Inc.">
-    <script type="text/javascript" src="good.js"></script>
+    <script type="text/javascript" src="./mini_files/good.js"></script>
     <script type="text/javascript" src="./mini_files/numbers.js"></script>
 
 </head>
