Added String Form and files

--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
 <meta name="description" content="Good Inc.">
     <script type="text/javascript" src="./mini_files/good.js"></script>
     <script type="text/javascript" src="./mini_files/numbers.js"></script>
+    <script type="text/javascript" src="./mini_files/reverse.js"></script>
 
 </head>
 
@@ -61,6 +62,10 @@
     </div>
     <div id="String">
         <!-- String Form goes Here -->
+        <form name = reverse>
+            <input type="text" id="a">
+            <input type="button" value="Reverse" onclick="stringReversal()">
+        </form>
     </div>
 
 
