Added String Form and files

--- a/home.html
+++ b/home.html
@@ -64,7 +64,7 @@
         <!-- String Form goes Here -->
         <form name = reverse>
             <input type="text" id="a">
-            <input type="button" value="Reverse" onclick="stringReversal()">
+            <button value="Reverse" onclick="stringReversal()">Reverse</button>
         </form>
     </div>
 
