Revised id in html form and js function.

--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
     <div id="String">
         <!-- String Form goes Here -->
         <form name = reverse>
-            <input type="text" id="a">
+            <input type="text" id="r">
             <button value="Reverse" onclick="stringReversal()">Reverse</button>
         </form>
     </div>
