--- a/reverse.html
+++ b/reverse.html
@@ -5,7 +5,7 @@
 <body>
 <p id="String"></p>
 <form name = reverse>
-    <input type="text" id="a">
+    <input type="text" id="r">
     <button value="Reverse" onclick="stringReversal()">Reverse</button>
 </form>
 </body>
